# emu

./: .gitignore  Cargo.toml
src/: decode.rs  hart.rs  lib.rs  main.rs  micro_op.rs  uop.rs  utils.rs  xlen.rs  xqt.rs
src/decode/: cache.rs  common.rs  dec16.rs  dec32.rs  mod.rs
src/execute/: alu.rs  dispatch.rs  mod.rs
src/fpu/: arch.rs  err.md  fpu_test.cc  mod.rs  tests.rs
src/fpu/testgen/: a.out  fpu_test.cc
src/memory/: mod.rs
src/privilege/: mod.rs
src/xqt/: alu.rs  mod.rs  ops.rs
