[package]
name = "emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
RV64 = []
RV128 = ["RV64"] # still broken
# Atomic
A = []
# Bit-Manipulation
# B = []
# Compressed
C = []
# Double-Precision Floating-Point
D = ["F"]
# Single-Precision Floating-Point
F = ["Zicsr"]
# Integer Multiply/Divide
M = []
# Vector
# V = []
# CSR instructions
Zicsr = []
# Instruction-Fetch Fence
Zifencei = []
# Total Store Ordering
# Ztso = []

G = ["M", "A", "F", "D", "Zicsr", "Zifencei"]
default = ["all"]
all = ["RV64", "G", "C"]
