[package]
name = "emu"
version = "0.1.0"
authors = ["cclin0816 <benjamin.cclin@gmail.com>"]
edition = "2021"
license = "MIT"

[features]
RV64 = []
RV128 = ["RV64"] # still broken
# Atomic
A = []
# Bit-Manipulation
# B = []
# Compressed
C = []
# Double-Precision Floating-Point
D = ["F"]
# Single-Precision Floating-Point
F = ["Zicsr"]
# Integer Multiply/Divide
M = []
# Vector
# V = []
# CSR instructions
Zicsr = []
# Instruction-Fetch Fence
Zifencei = []
# Total Store Ordering
# Ztso = []

G = ["M", "A", "F", "D", "Zicsr", "Zifencei"]
default = ["all"]
all = ["RV64", "G", "C"]
